# torchtrainer

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  todel.py
test/: test_utils.py
tests/: conftest.py  fixtures.py  test_callbacks.py  test_metrics.py  test_utils.py
tests/integration/: test_callback.py  test_trainer.py  utils.py
torchtrainer/: utils.py
torchtrainer/callbacks/: EarlyStopping.py  callback_container.py  callbacks.py  checkpoint.py  csv_logger.py  early_stopping.py  logger.py  progressbar.py  reducelronplateau.py  steplr.py  visdom.py
torchtrainer/metrics/: binary_accuracy.py  metric.py
torchtrainer/modules/: trainer.py  utils.py
