[tool.poetry]
name = "torchtrainer"
version = "0.1.0"
description = ""
authors = ["Victor Künstler <victor.kuenstler@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.2"
torchvision = "^0.4.0"
visdom = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
